# temoto_action_engine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  package.xml
.github/workflows/: build.yml  cmake.yml
cmake/: temoto_action_engineConfig.cmake.in
devel/: _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
examples/src/: tae_example.cpp
examples/umrf_graphs/: example.json  (+3 more)
launch/: test_action_engine.launch
msg/: BroadcastStartUmrfGraph.msg  BroadcastStopUmrfGraph.msg  StopUmrfJsonGraph.msg  UmrfGraph.msg  UmrfGraphDiff.msg  UmrfJsonGraph.msg
scripts/: test_action_engine.sh
src/: action_engine.cpp  action_engine_node.cpp  action_engine_ros1.cpp  action_executor.cpp  action_handle.cpp  action_indexer.cpp  action_match_finder.cpp  arg_parser.cpp  engine_test.cpp  graph_modifier_node.cpp  parser_node.cpp  temoto_ae_base.cpp  umrf.cpp  umrf_graph.cpp  umrf_graph_exec.cpp  umrf_graph_fs.cpp  umrf_graph_helper.cpp  umrf_graph_node.cpp  umrf_graph_node_exec.cpp  umrf_json.cpp  umrf_json_converter.cpp  umrf_json_converter_nlj.cpp  umrf_node.cpp  umrf_node_exec.cpp
srv/: GetUmrfGraphs.srv  StartUmrfGraph.srv  StopUmrfGraph.srv
temoto_action_engine/: CMakeLists.txt  README.md  temoto_action_engine.pc.in
temoto_action_engine/examples/actions/ta_example_1/src/: ta_example_1.cpp
temoto_action_engine/examples/src/: tae_example.cpp
temoto_action_engine/include/temoto_action_engine/: action_base.h  action_engine.h  action_indexer.h  action_match_finder.h  action_parameter.h  action_parameters.h  temoto_error.h  umrf.h  umrf_graph_base.h  umrf_graph_exec.h  umrf_json_converter.h  umrf_node.h  umrf_node_exec.h
temoto_action_engine/src/: action_engine.cpp  action_indexer.cpp  umrf_graph_exec.cpp  umrf_graph_fs.cpp  umrf_json_converter.cpp  umrf_node.cpp  umrf_node_exec.cpp
test/: CMakeLists.txt  setup.bash  umrf_0.json  umrf_1.json  umrf_2.json  umrf_3.json  umrf_google_parser.json  umrf_list.txt  umrf_ta_wrapper_test.json
test/actions/ta_add_string/: CMakeLists.txt  ta_add_string.umrf.json
test/actions/ta_add_string/include/ta_add_string/: input_parameters.hpp  output_parameters.hpp  temoto_action.hpp
test/actions/ta_add_string/src/: ta_add_string.cpp
test/actions/ta_append_str_a/: CMakeLists.txt  ta_append_str_a.umrf.json
test/actions/ta_append_str_a/src/: ta_append_str_a.cpp
test/actions/ta_compare_number/: CMakeLists.txt  package.xml  ta_compare_number.umrf.json
test/actions/ta_compare_number/include/ta_compare_number/: input_parameters.hpp  temoto_action.hpp
test/actions/ta_compare_number/src/: ta_compare_number.cpp
test/actions/ta_compare_string/: CMakeLists.txt  ta_compare_string.umrf.json
test/actions/ta_compare_string/include/ta_compare_string/: input_parameters.hpp  temoto_action.hpp
test/actions/ta_compare_string/src/: ta_compare_string.cpp
test/actions/ta_example_1/: CMakeLists.txt  ta_example_1.umrf.json
test/actions/ta_example_1/include/ta_example_1/: temoto_action.h
test/actions/ta_example_1/src/: ta_example_1.cpp
test/actions/ta_generate_result/: CMakeLists.txt  ta_generate_result.umrf.json
test/actions/ta_generate_result/include/ta_example_1/: temoto_action.h
test/actions/ta_generate_result/src/: ta_generate_result.cpp
test/actions/ta_ingest_result/: CMakeLists.txt  ta_ingest_result.umrf.json
test/actions/ta_ingest_result/include/ta_ingest_result/: input_parameters.hpp  temoto_action.hpp
test/actions/ta_ingest_result/src/: ta_ingest_result.cpp
test/actions/ta_logger/: CMakeLists.txt  ta_logger.umrf.json
test/actions/ta_logger/include/ta_logger/: input_parameters.hpp  temoto_action.hpp
test/actions/ta_logger/src/: ta_logger.cpp
test/actions/ta_relay_string/: CMakeLists.txt  ta_relay_string.umrf.json
test/actions/ta_relay_string/include/ta_relay_string/: input_parameters.hpp  output_parameters.hpp  temoto_action.hpp
test/actions/ta_relay_string/src/: ta_relay_string.cpp
test/actions/ta_timer/: CMakeLists.txt  ta_timer.umrf.json
test/actions/ta_timer/include/ta_timer/: conditional_wait.hpp  input_parameters.hpp  output_parameters.hpp  temoto_action.hpp
test/actions/ta_timer/src/: conditional_wait.cpp  ta_timer.cpp
test/actions/ta_trigger_result/: CMakeLists.txt  ta_trigger_result.umrf.json
test/actions/ta_trigger_result/include/ta_trigger_result/: input_parameters.hpp  temoto_action.hpp
test/actions/ta_trigger_result/src/: ta_trigger_result.cpp
test/actions/ta_trigger_result_multi/: CMakeLists.txt  ta_trigger_result_multi.umrf.json
test/actions/ta_trigger_result_multi/include/ta_trigger_result_multi/: input_parameters.hpp  temoto_action.hpp
test/actions/ta_trigger_result_multi/src/: ta_trigger_result_multi.cpp
test/src/: engine_tests.cpp  json_tests.cpp  multi_actor_sync_test.bash  run_graph_cmd.cpp  tae_example.cpp  test_external_changes.cpp  test_semantics.cpp  tests.cpp
test/umrf_graphs/: engine_test_1.graph.json  engine_test_10.graph.json  engine_test_10_b.graph.json  engine_test_10_modified.graph.json  engine_test_11.graph.json  engine_test_2.graph.json  engine_test_3.graph.json  engine_test_4.graph.json  engine_test_5.graph.json  engine_test_6.graph.json  engine_test_7.graph.json  engine_test_8.graph.json  engine_test_9.graph.json  engine_test_9_modified.graph.json  engine_test_multi_actor.graph.json  example_1.umrfg.json  example_a.json  example_b.json  external_changes_test_0.graph.json  external_changes_test_1.graph.json  external_changes_test_2_a.graph.json  external_changes_test_2_b.graph.json  external_changes_test_3_a.graph.json  external_changes_test_3_b.graph.json  external_changes_test_3_c.graph.json  external_changes_test_4_a.graph.json  external_changes_test_4_b.graph.json  format_test.graph.json  semantics_test_1.graph.json  semantics_test_2.graph.json  semantics_test_3.graph.json  semantics_test_4.graph.json  semantics_test_5.graph.json  semantics_test_6.graph.json  semantics_test_7.graph.json  semantics_test_8.graph.json  semantics_test_9.graph.json  semantics_test_9_infinite_loop.graph.json  ta_generate_string.graph.json
(+60 files in other folders)
